+first commit homework lesson-1

--- a/lesson1/答题卡.md
+++ b/lesson1/答题卡.md
@@ -8,23 +8,23 @@
 
 - Substrate的官方文档网址是什么？
 
-  
+  https://substrate.dev/docs
 
 - Substrate的recipe网址是什么？
 
-  
+  https://substrate.dev/recipes/
 
 - Substrate的rust docs的网址是什么？
 
-  
+  https://substrate.dev/rustdocs/v2.0.0-rc2/sc_service/index.html
 
 - Substrate的tutorial的网址是什么？
 
-  
+  https://www.substrate.io/tutorials/  
 
 - Substrate Seminar在每周几进行？
 
-
+  每周二  
 
 
 
@@ -34,21 +34,32 @@
 
 - star和watch substrate和polkadot的repo，并截屏
 
+  <img src="https://github.com/nziyouren/team2/blob/master/img/star-watch-substrate.png" alt="Drawing" width="1200px" height="750px" />
   
+  
+  <img src="https://github.com/nziyouren/team2/blob/master/img/tar-watch-polkadot.png" alt="Drawing" width="1200px" height="750px" />
+
 
 - fork substrate到自己的repo，并给自己的repo提一个issue和PR，并截屏
 
 
-
+  <img src="https://github.com/nziyouren/team2/blob/master/img/issue.png" alt="Drawing" width="1200px" height="750px" />
+  
+  <img src="https://github.com/nziyouren/team2/blob/master/img/pr-self-repo.png" alt="Drawing" width="1200px" height="750px" />  
 
 
 #### 第三题
 
 **请编译第一节课中的node-template并截图编译成功的界面** (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)
 
-
+  <img src="https://github.com/nziyouren/team2/blob/master/img/build-success.png" alt="Drawing" width="1200px" height="750px" />
 
 #### 第四题
 
 **请运行node-template节点并截图 ，单节点和多节点分别截图（ (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)）**
 
+  <img src="https://github.com/nziyouren/team2/blob/master/img/run-single-node.png" alt="Drawing" width="1200px" height="750px" />
+  
+  <img src="https://github.com/nziyouren/team2/blob/master/img/multi-node-alice.png" alt="Drawing" width="1200px" height="750px" />
+  
+  <img src="https://github.com/nziyouren/team2/blob/master/img/multi-node-bob.png" alt="Drawing" width="1200px" height="750px" />  
