*fix img path *change img name

--- a/lesson1/答题卡.md
+++ b/lesson1/答题卡.md
@@ -34,10 +34,10 @@
 
 - star和watch substrate和polkadot的repo，并截屏
 
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-substrate.png" alt="Drawing" width="1200px" height="750px" />
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-substrate.png" alt="Drawing"/>
   
   
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/tar-watch-polkadot.png" alt="Drawing" width="1200px" height="750px" />
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-polkadot.png" alt="Drawing" width="1200px" height="750px" />
 
 
 - fork substrate到自己的repo，并给自己的repo提一个issue和PR，并截屏
