*update img layout

--- a/lesson1/答题卡.md
+++ b/lesson1/答题卡.md
@@ -34,32 +34,43 @@
 
 - star和watch substrate和polkadot的repo，并截屏
 
+  **watch substrate**
   <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-substrate.png" alt="Drawing"/>
   
   
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-polkadot.png" alt="Drawing" width="1200px" height="750px" />
+  **watch polkadot**
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/star-watch-polkadot.png" alt="Drawing"/>
 
 
 - fork substrate到自己的repo，并给自己的repo提一个issue和PR，并截屏
 
-
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/issue.png" alt="Drawing" width="1200px" height="750px" />
+  **issue**
+    
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/issue.png" alt="Drawing"/>
   
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/pr-self-repo.png" alt="Drawing" width="1200px" height="750px" />  
+  **pr**
+  
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/pr-self-repo.png" alt="Drawing"/>  
 
 
 #### 第三题
 
 **请编译第一节课中的node-template并截图编译成功的界面** (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)
 
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/build-success.png" alt="Drawing" width="1200px" height="750px" />
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/build-success.png" alt="Drawing"/>
 
 #### 第四题
 
 **请运行node-template节点并截图 ，单节点和多节点分别截图（ (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)）**
 
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/run-single-node.png" alt="Drawing" width="1200px" height="750px" />
+  **single node**
   
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/multi-node-alice.png" alt="Drawing" width="1200px" height="750px" />
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/run-single-node.png" alt="Drawing"/>
   
-  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/multi-node-bob.png" alt="Drawing" width="1200px" height="750px" />  
+  **alice** 
+  
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/multi-node-alice.png" alt="Drawing"/>
+  
+  **bob**
+  
+  <img src="https://github.com/nziyouren/team2/blob/lesson-1/lesson1/img/multi-node-bob.png" alt="Drawing"/>  
